<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView 
        android:id="@+id/homeLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/portDetails" />
    
    <EditText
        android:id="@+id/IP_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/homeLabel"
        android:hint="@string/IPAddress" />
    
    <EditText
        android:id="@+id/Port_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/IP_Address"
        android:hint="@string/portNumber" />
    
    <Button
        android:id="@+id/CreatePort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Port_Number"
        android:text="@string/createPort" 
        android:onClick="createPort" />
</RelativeLayout>